# Biometric-Face_Recognition

./: .gitignore  README.md  pyproject.toml
bio_facerecognition/: hooks.py  modules.txt
bio_facerecognition/bio_facerecognition/api/: bio_facial_recognition.py
bio_facerecognition/bio_facerecognition/doctype/files_for_biometric/: files_for_biometric.js  files_for_biometric.json  files_for_biometric.py  test_files_for_biometric.py
bio_facerecognition/bio_facerecognition/doctype/link_emp_for_bio/: link_emp_for_bio.js  link_emp_for_bio.json  link_emp_for_bio.py  test_link_emp_for_bio.py
bio_facerecognition/config/: desktop.py  docs.py
bio_facerecognition/override/: laborers_attendance_log.py
bio_facerecognition/public/js/: attandance_log.js
