[project]
name = "bio_facerecognition"
authors = [
    { name = "BluePhoenix", email = "bluephoenix00995@gmail.com"}
]
description = "Biometric facial recognition system."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "face-recognition",
    "opencv-python",
    "numpy"
]


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
[deploy.dependencies.apt]
packages = [
  "cmake",
  "libgl1-mesa-glx"
]
